WP81/JS: fixing visual gap between volume slider and transport bar

--- a/Universal.Js.Core/css/Default-base.css
+++ b/Universal.Js.Core/css/Default-base.css
@@ -458,6 +458,10 @@
     transition: opacity 250ms linear;
 }
 
+.phone .pf-volume-mute-container .pf-volume-slider-control {
+    bottom: calc(100% - 4px);
+}
+
 .pf-volume-mute-container .pf-volume-slider-control.pf-hidden {
     display: inline-block;
     opacity: 0;
